--- a/storyTwo.html
+++ b/storyTwo.html
@@ -13,11 +13,10 @@
     <p id="demo">Fetch eine File</p>
 
     <script>
-    let url = "OpenJsonData_wifi.json"
-    fetch(url)
+    let file = "OpenJsonData_wifi.json"
+    fetch(file)
     .then((response) => response.json())
     .then((data) => console.log(data));
-
 
     </script>
 
