--- a/IndexTester.html
+++ b/IndexTester.html
@@ -32,7 +32,7 @@
     <p id="demo">Fetch eine File</p>
 
     <script>
-    let url = "OpenJsonData_wifi.json"
+    let url = "resource/OpenJsonData_wifi.json"
     function getAttributes(){
     fetch(url)
     .then((response) => response.json())
